--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="fetch-button-container">
+        <button id="fetch-button">Fetch Data</button>
+        <span id="click-count">0</span> clicks
+    </div>
+    <div id="results"></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
